--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,16 +3,15 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-project(wassup)
+project(helloworld)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -pedantic")
 # Configure compiler warnings
 if (CMAKE_CXX_COMPILER_ID MATCHES Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     # using regular Clang or AppleClang or GCC
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Werror -pedantic") # -Wold-style-cast
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Werror -Weffc++ -Wextra -pedantic")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     # using Visual Studio C++
-    set(CMAKE_CXX_FLAGS "/std:c++14 /permissive- /W4 /EHsc")
+    set(CMAKE_CXX_FLAGS "/std:c++17 /permissive- /W4 /EHsc")
 endif()
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL CYGWIN)
