--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,7 @@
-# version string format -- This will be overwritten later anyway
 version: "{build}"
 
 os:
   - Visual Studio 2017
-  - Visual Studio 2015
 
 init:
   - git config --global core.autocrlf input
@@ -13,26 +11,14 @@ init:
 install:
   - git submodule update --init --recursive
 
-# Win32 and x64 are CMake-compatible solution platform names.
-# This allows us to pass %PLATFORM% to CMake -A.
-platform:
-  - x86
-  - x64
-
-# build Configurations, i.e. Debug, Release, etc.
-configuration:
-  - Debug
-  - Release
-
-#Cmake will autodetect the compiler, but we set the arch
 before_build:
-  - cmake -H. -BBuild -A%PLATFORM%
+  - cmake -H. -BBuild -G "Visual Studio 15 2017 Win64" .
 
 # build with MSBuild
 build:
-  project: Build\ModernCppCI.sln # path to Visual Studio solution or project
-  parallel: true # enable MSBuild parallel builds
-  verbosity: normal # MSBuild verbosity level {quiet|minimal|normal|detailed}
+  project: Build\helloworld.sln
+  parallel: true
+  verbosity: normal
 
 test_script:
   - cd Build
