Test and base64 update (base64 tests still commented), rsa first upload, cipher interface update, key generator added, random update

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -2,5 +2,5 @@ project(client)
 
 add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME}
-  mbedcrypto
+  mbedcrypto shared
 )
