--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,5 +2,5 @@ project(server)
 
 add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME}
-  mbedcrypto
+  mbedcrypto shared
 )
