Sqlite database implementation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,9 +11,11 @@ file(GLOB server_test_src "./server/*.h" "./server/*.cpp"
         ../src/server/file_database.h
         ../src/server/server.cpp
         ../src/server/server.h
+        ../src/server/sqlite_database.cpp
+        ../src/server/sqlite_database.h
         )
 add_executable(server_test test_main.cpp ${server_test_src})
-target_link_libraries(server_test shared)
+target_link_libraries(server_test shared sqlite3)
 add_test(server_test_execute server_test)
 
 file(GLOB shared_test_src "./shared/*.h" "./shared/*.cpp")
