--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include/mbedtls/include)
+include_directories(${PROJECT_SOURCE_DIR}/include/sqlite3)
 
 add_subdirectory(include/mbedtls)
+add_subdirectory(include/sqlite3)
 add_subdirectory(src)
 
 enable_testing()
