--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,6 +1,12 @@
 project(server)
 
-add_executable(${PROJECT_NAME} main.cpp config.h database.h file_database.h file_database.cpp)
+add_executable(${PROJECT_NAME} main.cpp
+        config.h
+        database.h
+        file_database.h
+        file_database.cpp
+        sqlite_database.h
+        sqlite_database.cpp)
 target_link_libraries(${PROJECT_NAME}
-  mbedcrypto shared
+  mbedcrypto shared sqlite3
 )
