--- a/include/sqlite3/CMakeLists.txt
+++ b/include/sqlite3/CMakeLists.txt
@@ -6,3 +6,4 @@ file(GLOB sqlite_src
         )
 add_library(sqlite3 ${sqlite_src})
 set_target_properties(sqlite3 PROPERTIES LINKER_LANGUAGE CXX)
+target_link_libraries(sqlite3 ${CMAKE_DL_LIBS})
