--- a/include/sqlite3/CMakeLists.txt
+++ b/include/sqlite3/CMakeLists.txt
@@ -1,9 +1,3 @@
-file(GLOB sqlite_src
-        shell.c
-        sqlite3.h
-        sqlite3.c
-        sqlite3ext.h
-        )
-add_library(sqlite3 ${sqlite_src})
+add_library(sqlite3 shell.c sqlite3.h sqlite3.c sqlite3ext.h)
 set_target_properties(sqlite3 PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(sqlite3 ${CMAKE_DL_LIBS})
