MSVC cmake update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,13 @@ add_compile_definitions(MBEDTLS_CONFIG_FILE=<config.h>)
 SET(ENABLE_PROGRAMS OFF CACHE BOOL "Build mbed TLS programs.")
 SET(ENABLE_TESTING OFF CACHE BOOL "Build mbed TLS tests.")
 
-# system dependent functionality / using ELSE linux
-if (${CMAKE_SYSTEM_NAME} STREQUAL CYGWIN OR WIN32)
+# MSVC exceotions support
+if (MSVC)
+    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /EHc-")
+endif()
+
+# system dependent functionality WINDOWS impementation ELSE assuming linux
+if (WIN32 ${CMAKE_SYSTEM_NAME} STREQUAL CYGWIN)
     add_compile_definitions(WINDOWS)
 endif()
 
