MSVC /EHsc flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(CMAKE_CXX_FLAGS -pthread)
 SET(CMAKE_C_FLAGS -pthread)
 # MSVC exceptions support
 if (MSVC)
-    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /EHc-")
+    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /EHsc")
 endif()
 
 # mbedtls settings
