Overall update with corrections and clarifications

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(${PROJECT_NAME} main.cpp
         database.h
         file_database.h
         file_database.cpp
+        file_tranmission_manager.h
         sqlite_database.h
         sqlite_database.cpp)
 target_link_libraries(${PROJECT_NAME}
