Tranmission manager updates

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${PROJECT_NAME} main.cpp
         file_database.h
         file_database.cpp
         file_tranmission_manager.h
+        file_tranmission_manager.cpp
         sqlite_database.h
         sqlite_database.cpp)
 target_link_libraries(${PROJECT_NAME}
