Erroring policy update

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(server)
 
 add_executable(${PROJECT_NAME} main.cpp
+        server.h
+        server.cpp
+        requests.h
         database.h
         file_database.h
         file_database.cpp
