User side transmission implementation

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,6 +1,13 @@
 project(client)
 
-add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME}
-  mbedcrypto shared
-)
+add_executable(${PROJECT_NAME} main.cpp
+        client.h
+        client.cpp
+        connection.h
+        connection.cpp
+        secure_channel.cpp
+        secure_channel.h
+        transmission_file_client.h
+        )
+target_link_libraries(${PROJECT_NAME} mbedcrypto shared sqlite3)
+
