Server & user interraction, server performance, database and code update.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ configure_file(${CMAKE_SOURCE_DIR}/src/keys/server_pub.pem ${CMAKE_CURRENT_BINAR
 
 file(GLOB client_test_src "./client/*.h" "./client/*.cpp"
         ../src/client/client.cpp
-        ../src/server/database.h
+        ../src/server/database_server.h
         ../src/server/file_database.cpp
         ../src/server/file_database.h
         ../src/server/server.cpp
@@ -17,7 +17,7 @@ target_link_libraries(client_test shared sqlite3)
 add_test(client_test_execute client_test)
 
 file(GLOB server_test_src "./server/*.h" "./server/*.cpp"
-        ../src/server/database.h
+        ../src/server/database_server.h
         ../src/server/file_database.cpp
         ../src/server/file_database.h
         ../src/server/server.cpp
