--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${PROJECT_NAME} main.cpp
         server.h
         server.cpp
         requests.h
-        database.h
+        database_server.h
         sqlite_database.h
         sqlite_database.cpp)
 target_link_libraries(${PROJECT_NAME}
