--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include/sqlite3)
 
 add_subdirectory(include/mbedtls)
 add_subdirectory(include/sqlite3)
+add_subdirectory(include/xeddsa)
+
 add_subdirectory(src)
 
 enable_testing()
