--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ compiler:
   - gcc
   - clang
 
+before_install:
+  - sudo apt-get update && sudo apt-get install -y libsodium18 libsodium-dev
+
 before_script:
   - cmake .
 
