--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,5 +32,5 @@ add_test(server_test_execute server_test)
 file(GLOB shared_test_src "./shared/*.h" "./shared/*.cpp")
 add_executable(shared_test test_main.cpp ${shared_test_src})
 
-target_link_libraries(shared_test shared)
+target_link_libraries(shared_test shared eddsa)
 add_test(shared_test_execute shared_test)
