Key files naming policy

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(client)
 
 add_executable(${PROJECT_NAME} main.cpp
+        config.h
         client.h
         client.cpp
         secure_channel.cpp
