--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ compiler:
   - clang
 
 before_script:
+  - sudo apt-get update
+  - sudo apt-get install libqt5websockets5-dev
   - cmake .
 
 script: make && make test ARGS="-V"
