--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,12 +1,13 @@
 project(client)
 
 add_executable(${PROJECT_NAME} main.cpp
+        transmission_net_client.h
         config.h
         client.h
         client.cpp
         secure_channel.cpp
         secure_channel.h
-        transmission_file_client.h
+        CMDapp.h
         )
-target_link_libraries(${PROJECT_NAME} mbedcrypto shared sqlite3)
+target_link_libraries(${PROJECT_NAME} mbedcrypto shared sqlite3 Qt5::Network Qt5::Core)
 
