added some tests for client

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -2,6 +2,7 @@ project(client)
 
 add_executable(${PROJECT_NAME} main.cpp
         transmission_net_client.h
+        transmission_net_client.cpp
         config.h
         client.h
         client.cpp
