--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -6,7 +6,9 @@ add_executable(${PROJECT_NAME} main.cpp
         ../shared/requests.h
         database_server.h
         sqlite_database.h
-        sqlite_database.cpp)
+        sqlite_database.cpp
+        transmission_net_server.h
+        )
 target_link_libraries(${PROJECT_NAME}
   mbedcrypto shared sqlite3
 )
