Client app Beta + client tests

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(client)
+configure_file(${CMAKE_SOURCE_DIR}/src/keys/server_pub.pem ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 
 add_executable(${PROJECT_NAME} main.cpp
         transmission_net_client.h
@@ -9,6 +10,7 @@ add_executable(${PROJECT_NAME} main.cpp
         secure_channel.cpp
         secure_channel.h
         CMDapp.h
+        CMDapp.cpp
         )
 target_link_libraries(${PROJECT_NAME} mbedcrypto shared sqlite3 Qt5::Network Qt5::Core)
 
