client and server app 0.2

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(server)
 
+configure_file(${CMAKE_SOURCE_DIR}/src/keys/server_pub.pem ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+configure_file(${CMAKE_SOURCE_DIR}/src/keys/server_priv.pem ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+
 add_executable(${PROJECT_NAME} main.cpp
         server.h
         server.cpp
@@ -8,5 +11,5 @@ add_executable(${PROJECT_NAME} main.cpp
         sqlite_database.h
         sqlite_database.cpp
         transmission_net_server.h
-        )
+        log_app.h)
 target_link_libraries(${PROJECT_NAME} mbedcrypto shared sqlite3  Qt5::Network Qt5::Core)
