--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(client_test shared sqlite3 Qt5::Network Qt5::Core)
 add_test(client_test_execute client_test)
 
 file(GLOB server_test_src "./server/*.h" "./server/*.cpp"
+        ../src/server/transmission_net_server.h
         ../src/server/database_server.h
         ../src/server/file_database.cpp
         ../src/server/file_database.h
@@ -28,8 +29,8 @@ file(GLOB server_test_src "./server/*.h" "./server/*.cpp"
         ../src/server/sqlite_database.cpp
         ../src/server/sqlite_database.h
         )
-add_executable(server_test test_main.cpp ${server_test_src})
-target_link_libraries(server_test shared sqlite3)
+add_executable(server_test test_main.cpp ${server_test_src} server/test_server_net.cpp server/test_server_net.h)
+target_link_libraries(server_test shared sqlite3 Qt5::Network Qt5::Core)
 add_test(server_test_execute server_test)
 
 file(GLOB shared_test_src "./shared/*.h" "./shared/*.cpp")
