--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,7 +29,7 @@ file(GLOB server_test_src "./server/*.h" "./server/*.cpp"
         ../src/server/sqlite_database.cpp
         ../src/server/sqlite_database.h
         )
-add_executable(server_test test_main.cpp ${server_test_src} server/test_server_net.cpp server/test_server_net.h)
+add_executable(server_test test_main.cpp ${server_test_src})
 target_link_libraries(server_test shared sqlite3 Qt5::Network Qt5::Core)
 add_test(server_test_execute server_test)
 
@@ -37,3 +37,5 @@ file(GLOB shared_test_src "./shared/*.h" "./shared/*.cpp")
 add_executable(shared_test test_main.cpp ${shared_test_src})
 target_link_libraries(shared_test shared eddsa)
 add_test(shared_test_execute shared_test)
+
+add_subdirectory(profiling)
