Profiler target for real network + some code style

--- a/test/profiling/CMakeLists.txt
+++ b/test/profiling/CMakeLists.txt
@@ -8,6 +8,9 @@ if (PROFILER)
     configure_file(${CMAKE_SOURCE_DIR}/src/keys/server_priv.pem ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
     configure_file(${CMAKE_SOURCE_DIR}/src/keys/server_pub.pem ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 
+    add_executable(setup setup.cpp)
+    target_link_libraries(setup mbedcrypto shared)
+
     file(GLOB sources_profiling
             ../../src/server/transmission_file_server.h
             ../../src/server/database_server.h
@@ -21,10 +24,18 @@ if (PROFILER)
             ../../src/client/transmission_file_client.h
             )
 
-    add_executable(profiling1 scenario1.cpp ${sources_profiling})
-    target_link_libraries(profiling1 mbedcrypto shared sqlite3 Qt5::Core)
+    add_executable(progiling_mock_files files.cpp ${sources_profiling})
+    target_link_libraries(progiling_mock_files mbedcrypto shared sqlite3 Qt5::Core)
 
-    add_executable(setup setup.cpp)
-    target_link_libraries(setup mbedcrypto shared)
+    add_executable(profiling_net net.cpp net.h ${sources_profiling}
+            ../../src/server/net_utils.h
+            ../../src/server/transmission_net_server.h
+            ../../src/server/transmission_net_server.cpp
+            ../../src/server/log_app.h
+            ../../src/client/transmission_net_client.h
+            ../../src/client/transmission_net_client.cpp
+            )
+    target_link_libraries(profiling_net mbedcrypto shared sqlite3 Qt5::Core Qt5::Network)
+    set_property(SOURCE net.cpp PROPERTY SKIP_AUTOMOC ON)
 endif()
 
