Code style & warnings 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(CMAKE_CXX_FLAGS -pthread)
 SET(CMAKE_C_FLAGS -pthread)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
-    set(CMAKE_CXX_FLAGS "-pedantic -Wall -Wextra -g -Og -Wold-style-cast")
+    set(CMAKE_CXX_FLAGS "-pedantic -Wall -Wextra -g -Og")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     set(CMAKE_CXX_FLAGS "/permissive- /W4 /EHsc")
     add_definitions("-D_CRT_SECURE_NO_WARNINGS")
